--- a/LMS_project.ipynb
+++ b/LMS_project.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# LIBRARY MANAGEMENT SYSTEM\n",
-    "Team: Donna, Dhanya, Vijaylakshmi, Zeba, Shreya, Alisha"
+    "Team: Zeba Fathima,Donna, Dhanya, Vijaylakshmi,Shreya, Alisha"
    ]
   },
   {
